// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacing /> renders as inline 1`] = `
<div
  className="f14djkr0"
>
  Content
</div>
`;

exports[`<Spacing /> renders with a side 1`] = `
<div
  className="f17mxm1j"
>
  Content
</div>
`;

exports[`<Spacing /> renders with many sides 1`] = `
<div
  className="f1pb3g0p"
>
  Content
</div>
`;

exports[`<Spacing /> renders with padding 1`] = `
<div
  className="fzdhl41"
>
  Content
</div>
`;
